Fix mobile sizes (overflow)

--- a/gulp/scss/Components/_heroSection.scss
+++ b/gulp/scss/Components/_heroSection.scss
@@ -103,7 +103,7 @@
 
 		picture {
 			display: flex;
-			width: 100vw;
+			width: 100%;
 			height: 100vh;
 			justify-content: center;
 		}
@@ -160,6 +160,16 @@
 			h1 {
 				font-size: 36px;
 				line-height: 42px;
+			}
+
+			&__back-image {
+				picture {
+					align-items: flex-end;
+
+					* {
+						max-width: 100%;
+					}
+				}
 			}
 
 			&__button {
